[gd_scene load_steps=2 format=3 uid="uid://bvb2i7qkjdg1g"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_0lfwb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lfwb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.168627, 0.203922, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Picker"
horizontal_alignment = 1

[node name="Game1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game 1"

[node name="Game2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game 2"

[node name="Game3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game 3"

[connection signal="pressed" from="VBoxContainer/Game1Button" to="." method="_on_game1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Game2Button" to="." method="_on_game2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Game3Button" to="." method="_on_game3_button_pressed"]
